--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -44,24 +44,24 @@
         <!--facebokk-->
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1100px" style="margin-top:800px;background-image: url('letrasTransición.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1100px" data-4500="top:-1100px" data-5000="display:none;top:-2000px"  style="margin-top:800px;background-image: url('letrasTransición.png');position: fixed;background-position: bottom center;
     width: 100%;height:550px"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1000px" class="rotation-slow" style="margin-top:900px;background-image: url('letrasTipita2.png');position: fixed;background-position: bottom center;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-900px" data-3500="top:-1000px" data-4500="top:-1000px" data-5000="display:none;top:-2000px"  class="rotation-slow" style="margin-top:900px;background-image: url('letrasTipita2.png');position: fixed;background-position: bottom center;
     width: 100%;height:550px"> </div>
 
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-1000px" class="rotation-very-slow"  style="margin-top:800px;left:-130px;background-image: url('letrasTipita.png');position: fixed;background-position: bottom left;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-1000px" data-4500="top:-1000px" data-5000="display:none;top:-2000px" class="rotation-very-slow"  style="margin-top:800px;left:-130px;background-image: url('letrasTipita.png');position: fixed;background-position: bottom left;
            background-size: auto 1038px;
     background-repeat: no-repeat;
     width: 100%;height: 1000px;"> </div>
 
-        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-900px"   style="margin-top:1000px;margin-left:30px;background-image: url('tipita.png');position: fixed;background-position: bottom left;
+        <div data-0="transform: translate3d(0px, 0px, 0px); top:0%; display:block" data-1000="transform: translate3d(0px, -150px, 0px); top:0%" data-1001=" top:0" data-1500="top:0px" data-1700="top:-500px"  data-1850="top:-700px" data-3500="top:-900px" data-4500="top:-900px" data-5000="display:none;top:-2000px" style="margin-top:1000px;margin-left:30px;background-image: url('tipita.png');position: fixed;background-position: bottom left;
            background-size: auto;
     background-repeat: no-repeat;
     width: 50%;height: 1000px;"> </div>
 
-        <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="margin-top:-90px;position: fixed;width:100%">
+        <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" data-4500="display:block;top:50%" data-5000="display:none;top:-50%" style="margin-top:-90px;position: fixed;width:100%">
             <h1>
                 <span data-2000="margin-top:-900px" data-3000="margin-top:20px" data-3500="margin-top:0px" class="uniteALink" style="right:60px">A</span>
                 <!--<span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="uniteALink" style="right:115px"></span>-->
@@ -74,7 +74,7 @@
             </h1>
         </div>
 
-        <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" style="position: fixed;width:100%">
+        <div data-0="display:none" data-2000="display:block; top:0%" data-3000="display:block; top:50%" data-3500="display:block; top:50%" data-4500="display:block;top:50%" data-5000="display:none;top:-50%" style="position: fixed;width:100%">
             <h1>
                 <span data-2000="margin-top:-1000px" data-3000="margin-top:-20px" data-3500="margin-top:0px" class="facebookLink" style="right:40px">K</span>
                 <span data-2500="margin-top:-1000px" data-3000="margin-top:10px" data-3500="margin-top:0px" class="facebookLink" style="right:115px">O</span>
@@ -125,15 +125,34 @@
         </ul>
     </div>
 
-    <div style="width:100%; height:1000%;background-color:#2d3e54">
+    <div id="body" style="position:absolute;z-index:-1;width:100%; height:1000%;background-color:#2d3e54">
 
 
-
-        {{#each actividades}}
-                <div style="min-height:1000px;background-color: #2d3e54">
-                    {{nombre}}
+        <div style="width:100%;margin-top:4500px;background-color:#2d3e54">
+            <!--{{#each actividades}}-->
+                <!--{{>actividadItem}}-->
+            <!--{{/each}}-->
+                <div data-0="display:none;top:200%" data-4500="display:block" data-5000="display:block;top:10%" data-5500="top:10%" data-6000="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
+                    <span class="uniteALink">asdasd</span>
                 </div>
-          {{/each}}
+
+                <div data-0="display:none;top:200%" data-5500="display:block" data-6000="display:block;top:10%" data-6500="top:10%" data-7000="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
+                    <span class="uniteALink">asdas2d</span>
+                </div>
+
+                <div data-0="display:none;top:200%" data-6500="display:block" data-7000="display:block;top:10%" data-7500="top:10%" data-8000="display:none;top:-100%" style="position:fixed;width:80%;min-height:80%;background-color:green;margin-left:10%;margin-right:10%;">
+                    <span class="uniteALink">asdas2d</span>
+                </div>
+
+                <!--<div style="min-height:800px;background-color:green;margin:100px;">-->
+                    <!--<span class="uniteALink">{{nombre}}</span>-->
+                <!--</div>-->
+
+        </div>
+
+
+
     </div>
     <script type="text/javascript" src="skrollr.min.js"></script>
 </template>
+
